hphp/hack/test/typecheck/reified_generics/class-method-access.php.exp
File "class-method-access.php", line 9, characters 9-9:
No static method `f` in `C` (Typing[4090])
File "class-method-access.php", line 4, characters 19-19:
Did you mean instance method `f` instead?
File "class-method-access.php", line 3, characters 7-7:
Declaration of `C` is here
